# dbt-kolkhis

./: pyproject.toml
dbt/adapters/kolkhis/: __init__.py  column.py  connections.py  impl.py  relation.py
dbt/include/kolkhis/: dbt_project.yml
dbt/include/kolkhis/macros/: adapters.sql
dbt/include/kolkhis/macros/materializations/: table.sql  view.sql
dbt/include/kolkhis/macros/materializations/incremental/: incremental.sql  strategies.sql
dbt/include/kolkhis/macros/materializations/snapshots/: snapshot.sql  snapshot_merge.sql
dbt/include/kolkhis/macros/utils/: any_value.sql  bool_or.sql  concat.sql  dateadd.sql  datediff.sql  escape_single_quotes.sql  listagg.sql  safe_cast.sql  split_part.sql  timestamps.sql
tests/integration/: dbt_project.yml  profiles.yml
tests/integration/macros/: test_macro.sql
tests/integration/models/: cross_db_join.sql  custom_schema_brands.sql  eph_brand_names.sql  inc_append_categories.sql  inc_delete_insert_brands.sql  inc_merge_brands.sql  inc_merge_composite.sql  mat_table_brands.sql  mat_view_brand_count.sql  schema.yml  sources.yml  table_from_ephemeral.sql  table_with_hooks.sql
tests/integration/snapshots/: snap_brands.sql  snap_brands_timestamp.sql
tests/integration/tests/: assert_brands_have_rows.sql
